update for wyre

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,7 +30,9 @@
         "local-tax": "Local Tax Rate",
         "transact": "Transact",
         "help": "Help",
-        "language": "Language"
+        "language": "Language",
+        "activate": "Activate",
+        "liquidate": "Liquidate"
     },
     "method": {
         "title": "Payment Method",
